--- a/src/SkyBackground/ShootingStar.css
+++ b/src/SkyBackground/ShootingStar.css
@@ -1,5 +1,19 @@
 .shooting-star{
     position: absolute;
+    width: 3px;
+    height: 3px;
     border-radius: 50%;
     background: white;
+    box-shadow: 0 0 10px #FFF;
+    opacity: 0;
+    
+}
+.tail{
+    position: relative;
+    top: -9px;
+    left: -17px;
+    width: 20px;
+    height: 5px;
+    background: radial-gradient(ellipse at right, rgb(255, 255, 255) 0%, rgba(38, 38, 51, 0) 50%, #011724 95%);
+    transform: rotate(40deg);
 }
