add small version

--- a/src/SkyBackground/SolarSystem/SolarSystem.css
+++ b/src/SkyBackground/SolarSystem/SolarSystem.css
@@ -10,6 +10,12 @@
     height: 25vh;
 }
 
+.planet{
+    position: relative;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #e2efdf
+}
+
 @media (max-width: 768px){
     
     #solar-system{
